package arbolAVL;
public interface Comparable{
	public boolean esMenor(Object q);
	public boolean esMayor(Object q);
	public boolean esIgual(Object q);

}